# firestaff

./: .gitignore  AGENTS.md  AUTONOMOUS_1TO1_EXECUTION_PLAN.md  BUGFIX_TOGGLE_SPEC.md  CMakeLists.txt  CODING_PLAN.md  COMPILE.H  CONTRIBUTING.md  CSB_INTEGRATION_PLAN.md  DM1_ALL_GRAPHICS_FIX_PLAN.md  DM1_REDMSB_CODECOMPAR.md  DM1_SONG_DAT_FORMAT.md  DM1_V1_PLAN.md  DM1_V2_PLAN.md  DONE.md  FAS_0_2_ANALYSIS.md  GAP_ANALYSIS.md  GRAPHICS_DAT_EXPORT_MAPPING_AUDIT.md  GRAPHICS_DAT_TRUSTED_REFERENCE_SHORTLIST.md  LICENSE  LIST.md  M11_OWNERSHIP_AUDIT_MOVEMENT_DOORS_ENV.md  M11_PLAN.md  M11_REMAINING_PLAN.md  M12_PLAN.md  M12_REMAINING_PLAN.md  M13_PLAN.md  MILESTONES.md  NIGHT_12H_PARITY_RUN_20260425.md  PARITY_MATRIX_DM1_V1.md  PARITY_REFERENCES.md  PASS50_AUDIO_FINDINGS.md  PASS52_AUDIO_FINDINGS.md  PASS53_AUDIO_FINDINGS.md  PASS55_AUDIO_FINDINGS.md  PHASE15_PLAN.md  PHASE18_PLAN.md  PHASE19_PLAN.md  README.md  REDMCSB_FIRESTAFF_1TO1_ANALYSIS_AND_PLAN.md  (+730 more)
.github/: FUNDING.yml
assets/: Info.plist  create_icns.sh  firestaff.desktop
assets-v2/: ALL_ASSETS_V2_COVERAGE.md
build-main-check/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  capture_ingame_series  cmake_install.cmake  dm1_v2_export_entry_viewport_png  firestaff_m11_v2_initial_4k_capture  test_csb_v1_launch_blocker_m12  test_dm1_v1_save_load  test_dm1_v2_camera_controller_pc34  test_dm1_v2_hud_overlay_pc34  test_dm1_v2_item_render_pc34  test_dm1_v2_lighting_dynamic_pc34  test_dm1_v2_movement_command_adapter_pc34  test_dm1_v2_movement_viewport_pc34  test_dm1_v2_runtime_shell_pc34  test_dm1_v2_settings_pc34  test_m11_display_aspect_present_rect  test_m11_entrance_wait_policy  test_m11_quick_resume_roundtrip  test_m12_quick_resume_gate  test_menu_hit_launch_direct_click_m12
docs/: DATA_SETUP.md  DM1_V2_COMPLETION_PLAN.md  NEXUS_FILE_CLASSIFICATION.md  NEXUS_PLAN.md  V2_GRAPHICS_PLAN.md  VERIFIED_HASHES.md  ai_aggro.md  ai_champion.md  ai_creature.md  ai_grouping.md  ai_pathfinding.md  champ_advancement.md  champ_classes.md  champ_creation.md  champ_death.md  champ_equipment.md  csb_gap_champions.md  csb_gap_combat.md  csb_gap_dungeon.md  csb_gap_graphics.md  csb_gap_mechanics.md  dm1_gap_c01_c24_stats.md  dm1_gap_c25_c26.md  dm1_gap_hud.md  dm1_gap_inventory_items.md  dm1_gap_portrait_sensor.md  dm1_touch_champion.md  dm1_touch_inventory.md  dm1_touch_menu.md  dm1_touch_sensors.md  dm1_touch_viewport.md  dm1_v1_touchscreen_source_lock_manifest.md  dm1_v1_triggers_conditional.md  dm1_v1_triggers_events.md  dm1_v1_triggers_puzzle.md  dm1_v1_triggers_spawn.md  dm1_v1_triggers_timer.md  dm2_actuators.md  dm2_ai_aggro.md  dm2_ai_companion.md  (+203 more)
include/: action_area_name_routes_pc34_compat.h  action_area_routes_pc34_compat.h  ambient_layer_m11.h  animated_bg_m12.h  asset_find_by_hash.h  asset_loader_m11.h  asset_status_m12.h  audio_sdl_m11.h  bestiary_m12.h  bitmap_copy_pc34_compat.h  boot_plan_runtime_pc34_compat.h  boot_program_runtime_pc34_compat.h  boot_sequence_runtime_pc34_compat.h  branding_firestaff_rail_m12.h  branding_logo_readme_m12.h  byteops_pc34_compat.h  campaign_m12.h  champion_name_hand_routes_pc34_compat.h  cloud_sync_m12.h  color_presets_m11.h  colorblind_m11.h  config_m12.h  csb_p4_lighting_metadata.h  csb_v1_boot.h  csb_v1_character_pc34_compat.h  csb_v1_dungeon_loader_pc34_compat.h  csb_v1_dungeon_world_pc34_compat.h  csb_v1_game.h  csb_v1_monster_pc34_compat.h  csb_v1_runtime_pc34_compat.h  csb_v1_save_load_pc34_compat.h  csb_v1_utility_flow_pc34_compat.h  csb_v1_utility_import_pc34_compat.h  csb_v1_viewport_pc34_compat.h  csb_v2_asset_pipeline_pc34.h  csb_v2_chaos_enhanced.h  csb_v2_filters.h  csb_v2_hooks_stub_pc34.h  csb_v2_hud_overlay_pc34.h  csb_v2_hud_runtime.h  (+312 more)
parity-evidence/: BLOCKER_dm1_v1_movement_viewport_original_runtime.md  blocker-n2-csb-sample-save-search-20260430.md  candidate_hud_tick_prefix_message_log.md  candidate_viewport_runtime_224x136_crops.md  csb_atari_st_v2x_source_runtime_matrix.md  csb_dm2_source_lock.md  csb_v1_atari_asset_pair_manifest_20260506.md  csb_v1_denominator_scout_20260505.md  csb_v1_parity_surface_matrix_20260506.md  csb_v1_phase0_provenance_gate_20260520.md  csb_v1_source_lock_inventory_20260506.md  dm1_all_graphics_phase0_baseline.md  dm1_all_graphics_phase100_blocker_addendum.md  dm1_all_graphics_phase101_ornament_matrix_narrowing.md  dm1_all_graphics_phase102_map_overlay_classification.md  dm1_all_graphics_phase103_map_overlay_debug_only.md  dm1_all_graphics_phase104_map_matrix_debug_only_update.md  dm1_all_graphics_phase105_dialog_endgame_classification.md  dm1_all_graphics_phase106_overlay_blocker_addendum.md  dm1_all_graphics_phase107_overlay_placeholder_text_debug_only.md  dm1_all_graphics_phase108_dialog_matrix_debug_cleaned.md  dm1_all_graphics_phase1097_1196_v1_action_icon_area_clear.md  dm1_all_graphics_phase109_dialog_source_backdrop.md  dm1_all_graphics_phase10_source_front_walls.md  dm1_all_graphics_phase110_dialog_version_zone.md  dm1_all_graphics_phase111_dialog_matrix_source_backdrop_update.md  dm1_all_graphics_phase112_dialog_centered_message.md  dm1_all_graphics_phase113_dialog_matrix_centered_text.md  dm1_all_graphics_phase114_blocker_dialog_narrowing_update.md  dm1_all_graphics_phase115_dialog_c469_vertical_zone.md  dm1_all_graphics_phase116_dialog_source_width_split.md  dm1_all_graphics_phase117_dialog_c462_choice_text.md  dm1_all_graphics_phase118_dialog_c471_two_choice_zones.md  dm1_all_graphics_phase1197_1216_v1_action_icon_hatch.md  dm1_all_graphics_phase119_dialog_three_four_choice_zones.md  dm1_all_graphics_phase11_source_side_walls.md  dm1_all_graphics_phase120_dialog_choice_input_flow.md  dm1_all_graphics_phase1217_1236_v1_action_icon_zone_helpers.md  dm1_all_graphics_phase121_dialog_patch_graphics.md  dm1_all_graphics_phase122_endgame_source_graphics.md  (+753 more)
po/: README.md  csb.en.po  csb.pot  dm1.en.po  dm1.pot  dm1.sv.po  dm1_es.po  dm2.en.po  dm2.pot  firestaff.cs.po  firestaff.da.po  firestaff.de.po  firestaff.es.po  firestaff.fi.po  firestaff.fr.po  firestaff.hu.po  firestaff.it.po  firestaff.ja.po  (+36 more)
(+2605 files in other folders)
